--- a/H3.html
+++ b/H3.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
-</html>
+    <head>
+        <title>H3 Podcast Fan Site</title>
+    </head>
+
+    <body>
+    <h1>LET'S JUMP RIGHT INTO THE NEWS</h1>
+    <p>I'm hosted with GitHub Pages.
+        <img src="H3_PODCAST_1_1_large.jpg" alt="Check it out" 
+        width="500" height="500">
+    </p>
+    </body>
+
+</html> 
