--- a/H3.html
+++ b/H3.html
@@ -10,6 +10,17 @@
         <img src="H3_PODCAST_1_1_large.jpg" alt="Check it out" 
         width="500" height="500">
     </p>
+    
+    <h2>Fupa Lord</h2>
+    <p>
+        <img src="yw0v2k6bz9111.jpg" alt="I don't know what this does"
+        width="500" height="500">
+    </p>
+    <h3>The Legend</h3>
+    <p>
+        <img src="hila-klein-teddy-fresh.jpg" alt="I don't know what this does"
+        width="500" height="500">
+    </p>
     </body>
 
 </html> 
