--- a/H3.html
+++ b/H3.html
@@ -2,22 +2,23 @@
 <html>
     <head>
         <title>H3 Podcast Fan Site</title>
+        <link href="main.css">
     </head>
 
     <body>
         <h1>LET'S JUMP RIGHT INTO THE NEWS</h1>
             <p>I'm hosted with GitHub Pages.
-                <img src="H3_PODCAST_1_1_large.jpg" alt="Check it out" 
+                <img src="H3_PODCAST_1_1_large.jpg"
                 width="500" height="500">
             </p>
         <h2>Fupa Lord</h2>
             <p>
-                <img src="yw0v2k6bz9111.jpg" alt="I don't know what this does"
-                width="750" height="500">
+                <img src="yw0v2k6bz9111.jpg" 
+                width="600" height="500">
             </p>
         <h3>The Legend</h3>
             <p>
-                <img src="hila-klein-teddy-fresh.jpg" alt="I don't know what this does"
+                <img src="hila-klein-teddy-fresh.jpg"
                 width="750" height="500">
             </p>
     </body>
