--- a/H3.html
+++ b/H3.html
@@ -2,12 +2,13 @@
 <html>
     <head>
         <title>H3 Podcast Fan Site</title>
-        <link href="main.css">
+        <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+        <link href="main.css"> rel="stylesheet" type="text/css">
     </head>
 
     <body>
         <h1>LET'S JUMP RIGHT INTO THE NEWS</h1>
-            <p>I'm hosted with GitHub Pages.
+            <p>
                 <img src="H3_PODCAST_1_1_large.jpg"
                 width="500" height="500">
             </p>
